# solana-audit-toolkit

./: .gitignore  Cargo.toml  PRD.md  README.md
.github/workflows/: sat-self-audit.yml  test.yml
audit-findings/: SAT-001-missing-signer-check.md  SAT-002-pda-seed-mismatch.md  SAT-003-reinitialization-attack.md
crates/sat/: Cargo.toml
crates/sat/src/: analyzer.rs  cpi.rs  fuzzer.rs  idl.rs  lib.rs  main.rs  render.rs  reporter.rs  sarif.rs  serialization.rs  sysvar.rs  token2022.rs  tx_report.rs  types.rs  ui.rs
crates/sat/tests/: ast_analysis.rs  idl_analysis.rs
crates/sat/tests/fixtures/: clean_program.json  discriminator_collision.json  governance.json  reinit_vuln.json  staking.json  vault.json
crates/sat/tests/fixtures_ast/clean/: clean_program.rs
crates/sat/tests/fixtures_ast/vulnerable/: cei_vulnerable.rs  close_unsafe.rs  missing_auth.rs  missing_owner.rs  single_instruction.rs  sysvar_issues.rs  token2022_transfer.rs
docs/: BUG_BOUNTY_WORKFLOW.md
