[package]
name = "sat"
version = "0.1.0"
edition = "2024"
description = "Solana Audit Toolkit — vulnerability scanner and audit framework for Anchor-based Solana programs"
authors = ["Liam Carvajal"]
license = "MIT"
repository = "https://github.com/LiamCarPer/solana-audit-toolkit"

[[bin]]
name = "sat"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
walkdir = "2"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
